--- a/application/templates/history.html
+++ b/application/templates/history.html
@@ -51,13 +51,13 @@
                     <div class="btn-group">
                         <form name="remove_entry" action="/delete" method="POST" novalidate>
                             <input type="hidden" name="id" value="{{ entry.id }}">
-                            <button type="submit" class="btn btn-danger">
+                            <button type="submit" class="btn btn-danger" title="Delete this entry">
                                 <i class="bi bi-trash"></i>
                             </button>
                         </form>
                         <a href="{{ entry.link }}"
                             class="btn {% if not entry.link %}disabled btn-secondary {% else %}btn-primary{% endif %}"
-                            target="_blank">
+                            target="_blank" title="Go to listing">
                             <i class="bi bi-info-circle"></i>
                         </a>
                     </div>
