--- a/application/templates/history.html
+++ b/application/templates/history.html
@@ -7,12 +7,35 @@
         between different listings.</p>
 </div>
 {% if history %}
+<div class="dropdown text-end">
+    <button class="btn btn-primary dropdown-toggle" type="button" id="history-sort-toggle" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Sort by
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="history-sort-toggle">
+        {% for column in history.query.statement.columns.keys() %}
+        {% if column not in ["user_id", "id"] %}
+        <li>
+            <a class="dropdown-item {% if column == col_sort %}active{% endif %}"
+                href="{{ url_for('history', page=history.page, col_sort=column, dir='asc' if column == col_sort and desc else 'desc') }}">
+                {{ column | replace("_", " ")|title }}
+                {% if  (desc and column == col_sort) or (column != col_sort)  %}
+                        &#8595;
+                    {% else %}
+                        &#8593;
+                    {% endif %}
+            </a>
+        </li>
+        {% endif %}
+        {% endfor %}
+    </ul>
+</div>
 <div class="table-responsive my-2">
     <table class="table table-hover text-center">
         <thead class="table-dark">
             <tr>
                 <!-- <th scope="col">#</th> -->
-                <th scope="col">Date</th>
+                <th scope="col">Created</th>
                 <th scope="col">Beds</th>
                 <th scope="col">Bathrooms</th>
                 <th scope="col">Accomodates</th>
@@ -31,7 +54,7 @@
         <tbody>
             {% for entry in history.items %}
             <tr>
-                <td>{{ entry.created | render_date(format="%c") }}</td>
+                <td>{{ entry.created | render_date(format="%d/%m/%Y %H:%M") }}</td>
                 <td>{{ entry.beds }}</td>
                 <td>{{ entry.bathrooms }}</td>
                 <td>{{ entry.accomodates }}</td>
@@ -44,7 +67,7 @@
                 <td>${{ entry.prediction | round(precision=2) }}</td>
                 <td>{% if entry.actual_price %} ${{ entry.actual_price | round(precision=2) }} {% else %} N/A {% endif
                     %}</td>
-                <td>{% if entry.actual_price %} ${{ (entry.actual_price - entry.prediction) | round(precision=2) }} {%
+                <td>{% if entry.actual_price %} {{ (entry.actual_price - entry.prediction) | round(precision=2) }} {%
                     else %} N/A {% endif %}
                 </td>
                 <td>
@@ -70,12 +93,15 @@
 <nav aria-label="Table Navigation">
     <ul class="pagination justify-content-center">
         <li class="page-item {% if history.page == 1 %}disabled{% endif %}"><a
-                href="{{ url_for('history', page=history.prev_num) }}" class="page-link" tabindex="-1">Previous</a></li>
+                href="{{ url_for('history', page=history.prev_num, col_sort=col_sort) }}" class="page-link"
+                tabindex="-1">Previous</a></li>
         {% for page in history.iter_pages() %}
         <li class="page-item {% if page == history.page %}active{% endif %}"><a class="page-link"
-                href="{{ url_for('history', page=page) }}">{{ page }}</a></li>
+                href="{{ url_for('history', page=page, col_sort=col_sort) }}">{{ page }}</a></li>
         {% endfor %}
-        <li class="page-item {% if history.page == history.pages %}disabled{% endif %}"><a href="{{ url_for('history', page=history.next_num) }}" class="page-link">Next</a></li>
+        <li class="page-item {% if history.page == history.pages %}disabled{% endif %}"><a
+                href="{{ url_for('history', page=history.next_num, col_sort=col_sort) }}" class="page-link">Next</a>
+        </li>
     </ul>
 </nav>
 {% else %}
