--- a/application/templates/history.html
+++ b/application/templates/history.html
@@ -12,7 +12,7 @@
         aria-expanded="false">
         Sort by
     </button>
-    <ul class="dropdown-menu" aria-labelledby="history-sort-toggle">
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="history-sort-toggle">
         {% for column in history.query.statement.selected_columns.keys()|sort %}
         {% if column not in ["user_id", "id"] %}
         <li>
