--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="row">
+<div class="row py-5 my-4">
     <div class="px-4 py-5 my-5 col-lg-7 col-sm-12">
         <h1 class="display-5 fw-bold text-left">
             Rentier
