[feat] Improved alignment of text in explaination

--- a/application/templates/predict.html
+++ b/application/templates/predict.html
@@ -108,8 +108,8 @@
                     the same
                     {% else %}
                     ${{ price_diff | round(precision=2) }}
-                    {% if actual_price < price %} more {% else %} less {% endif %} {% endif %} than the listing price. {%
-                        endif %} </p>
+                    {% if actual_price < price %} more {% else %} less {% endif %} {% endif %} than the listing price.
+                        {% endif %} </p>
                         <a href="#explain" class="card-link">Why?</a>
                         <a href="/history" class="card-link">See history</a>
             </div>
@@ -123,7 +123,7 @@
     <p class="lead">
         Want to know how the model predicted the price? See our breakdown below...
     </p>
-    <div class="col-lg-4 order-1">
+    <div class="col-lg-4 order-1 mt-5 pt-5">
         <h3>What features does the model care about?</h3>
         <p class="lead">
             Generally, the model views the following factors as being the most important: (in order)
@@ -137,22 +137,24 @@
             <li>Ammenities</li>
         </ol>
     </div>
-    <figure class="col-lg-8 order-2">
+    <figure class="col-lg-8 order-2 text-center">
         <!-- Model Interpreation Here-->
         <img src="{{ url_for('static', filename='images/feature_importances.png')}}"
             alt="Feature importances Plot of Model" class="img img-fluid">
-        <figcaption>Feature Importances Plot of the Model</figfigcaption>
+        <figcaption>Feature Importances Plot of the Model</figcaption>
     </figure>
 </div>
 <div class="px-5 my-5 row">
-    <div class="col-lg-4 order-sm-1 order-lg-2">
+    <div class="col-lg-4 order-sm-1 order-lg-2 mt-5 pt-5">
         <h3>How accurate is the model?</h3>
-        <p class="lead">The model has a mean absolute error of $36 (on an independent test set), meaning that we can expect the model to be off by around $36 on average. </p>
+        <p class="lead">The model has a mean absolute error of $36 (on an independent test set), meaning that we can
+            expect the model to be off by around $36 on average. The root mean squared error of the model is $70.90, suggesting that the
+            model does not do as well on outlier listings.</p>
     </div>
-    <figure class="col-lg-8 order-sm-2 order-lg-2">
+    <figure class="col-lg-8 order-sm-2 order-lg-2 text-center">
         <img src="{{ url_for('static', filename='images/model_residual_plot.png')}}" alt="Residual Plot of Model"
             class="img img-fluid">
-        <figcaption>Residual Plot of the Model. Residuals = Actual - Predicted</figfigcaption>
+        <figcaption>Residual Plot of the Model. Residuals = Actual - Predicted</figcaption>
     </figure>
 </div>
 {% endif %}
